--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,26 +95,6 @@ services:
         - traefik.http.routers.registry-https.middlewares=registry-auth
         - traefik.http.services.registry.loadbalancer.server.port=5000
 
-  welcome:
-    image: nginx:latest
-    volumes:
-      - droppy-public:/usr/share/nginx/html:ro
-    deploy:
-      labels:
-        - traefik.enable=true
-        - traefik.docker.network=traefik-public
-        - traefik.constraint-label=traefik-public
-        - traefik.http.routers.traefik-public-http.rule=Host(`${DOMAIN?Variable not set}`)
-        - traefik.http.routers.traefik-public-http.entrypoints=http
-        - traefik.http.routers.traefik-public-http.middlewares=https-redirect
-        - traefik.http.routers.traefik-public-https.rule=Host(`${DOMAIN?Variable not set}`)
-        - traefik.http.routers.traefik-public-https.entrypoints=https
-        - traefik.http.routers.traefik-public-https.tls=true
-        - traefik.http.routers.traefik-public-https.tls.certresolver=le
-        - traefik.http.services.traefik-public.loadbalancer.server.port=80
-    networks:
-      - traefik-public
-
   gateone:
     image: dezota/gateone
     networks:
@@ -268,6 +248,26 @@ services:
         - traefik.http.routers.droppy-https.tls=true
         - traefik.http.routers.droppy-https.tls.certresolver=le
         - traefik.http.services.droppy.loadbalancer.server.port=8989
+
+  webserver:
+    image: nginx:latest
+    volumes:
+      - droppy-public:/usr/share/nginx/html:ro
+    deploy:
+      labels:
+        - traefik.enable=true
+        - traefik.docker.network=traefik-public
+        - traefik.constraint-label=traefik-public
+        - traefik.http.routers.traefik-public-http.rule=Host(`${DOMAIN?Variable not set}`)
+        - traefik.http.routers.traefik-public-http.entrypoints=http
+        - traefik.http.routers.traefik-public-http.middlewares=https-redirect
+        - traefik.http.routers.traefik-public-https.rule=Host(`${DOMAIN?Variable not set}`)
+        - traefik.http.routers.traefik-public-https.entrypoints=https
+        - traefik.http.routers.traefik-public-https.tls=true
+        - traefik.http.routers.traefik-public-https.tls.certresolver=le
+        - traefik.http.services.traefik-public.loadbalancer.server.port=80
+    networks:
+      - traefik-public
 
   sso-mysql:
     image: mysql:5.7
