--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,16 +120,16 @@ services:
     networks:
       - traefik-public
       - default
-    deploy:
-      labels:
-        # Couldn't make postfix work through Traefik so far - "Relay access denied"
-        #- traefik.enable=true
-        #- traefik.docker.network=traefik-public
-        #- traefik.constraint-label=traefik-public
-        #- traefik.tcp.routers.mail_relay.rule=HostSNI(`*`)
-        #- traefik.tcp.routers.mail_relay.entrypoints=smtp
-        #- traefik.tcp.routers.mail_relay.service=mail_relay
-        #- traefik.tcp.services.mail_relay.loadbalancer.server.port=25
+    # Couldn't make postfix work through Traefik so far - "Relay access denied"
+    #deploy:
+    #  labels:
+    #    - traefik.enable=true
+    #    - traefik.docker.network=traefik-public
+    #    - traefik.constraint-label=traefik-public
+    #    - traefik.tcp.routers.mail_relay.rule=HostSNI(`*`)
+    #    - traefik.tcp.routers.mail_relay.entrypoints=smtp
+    #    - traefik.tcp.routers.mail_relay.service=mail_relay
+    #    - traefik.tcp.services.mail_relay.loadbalancer.server.port=25
     environment:
       - SMF_DOMAIN=${DOMAIN?Variable not set}
       - SMF_CONFIG=${SMF_CONFIG?Variable not set}
