--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "25:25"
       - "80:80"
       - "443:443"
+      - "587:587"
       - "5000:5000"
       - "8181:8181"
     deploy:
@@ -49,6 +50,7 @@ services:
       - --providers.docker.constraints=Label(`traefik.constraint-label`, `traefik-public`)
       # Do not expose all Docker services, only the ones explicitly exposed
       - --entrypoints.smtp.address=:25
+      - --entrypoints.smtp-tls.address=:587
       - --entrypoints.http.address=:80
       - --entrypoints.https.address=:443
       - --entrypoints.https5000.address=:5000
@@ -130,12 +132,18 @@ services:
         - traefik.docker.network=traefik-public
         - traefik.constraint-label=traefik-public
     # Couldn't make postfix work through Traefik so far - "Relay access denied"
-        - traefik.tcp.routers.mail_relay.rule=HostSNI(`${DOMAIN?Variable not set}`)
-    #    - traefik.tcp.routers.mail_relay.rule=HostSNI(`*`)
-    #    - traefik.tcp.routers.mail_relay.tls.certresolver=le
+        - traefik.tcp.routers.mail_relay.rule=Host(`${DOMAIN?Variable not set}`)
+        #- traefik.tcp.routers.mail_relay.rule=HostSNI(`*`)
+        - traefik.tcp.routers.mail_relay.tls.certresolver=le
         - traefik.tcp.routers.mail_relay.entrypoints=smtp
         - traefik.tcp.routers.mail_relay.service=mail_relay
         - traefik.tcp.services.mail_relay.loadbalancer.server.port=25
+        - traefik.smtp.routers.mail_relay.tls=true
+        - traefik.smtp.routers.mail_relay.tls.certresolver=le
+        - traefik.smtp.routers.mail_relay.rule=Host(`${DOMAIN?Variable not set}`)
+        - traefik.smtp.routers.mail_relay.entrypoints=smtp-tls
+        - traefik.smtp.routers.mail_relay.service=mail_relay
+        - traefik.smtp.services.mail_relay.loadbalancer.server.port=587
     environment:
       - POSTFIX_RELAYHOST=smtp.gmail.com:587
       - SMTP_USER=${POSTFIX_SMTP_USER?Variable not set}:${POSTFIX_SMTP_PASSWORD?Variable not set}
@@ -146,6 +154,8 @@ services:
       - ENABLE_POSTGREY=1
       - POSTFIX_MYHOSTNAME=${DOMAIN?Variable not set}
       - POSTFIX_POSTMASTER=${LETSENCRYPT_EMAIL?Variable not set}
+      - POSTFIX_SMTP_TLS=yes
+      - POSTFIX_SMTP_CA_FILE=/etc/ssl/certs/ca-bundle.crt
       - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL?Variable not set}
       - LETSENCRYPT_HOST=${DOMAIN?Variable not set}
       - LETSENCRYPT_TEST=true
