--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,12 +132,12 @@ services:
         - traefik.docker.network=traefik-public
         - traefik.constraint-label=traefik-public
     # Couldn't make postfix work through Traefik so far - "Relay access denied"
-        - traefik.tcp.routers.mail_relay.rule=HostSNI(`mail.${DOMAIN?Variable not set}`)
+        #- traefik.tcp.routers.mail_relay.rule=HostSNI(`mail.${DOMAIN?Variable not set}`)
         #- traefik.tcp.routers.mail_relay.rule=HostSNI(`*`)
-        - traefik.tcp.routers.mail_relay.tls.certresolver=le
-        - traefik.tcp.routers.mail_relay.entrypoints=smtp
-        - traefik.tcp.routers.mail_relay.service=mail_relay
-        - traefik.tcp.services.mail_relay.loadbalancer.server.port=25
+        #- traefik.tcp.routers.mail_relay.tls.certresolver=le
+        #- traefik.tcp.routers.mail_relay.entrypoints=smtp
+        #- traefik.tcp.routers.mail_relay.service=mail_relay
+        #- traefik.tcp.services.mail_relay.loadbalancer.server.port=25
         - traefik.smtp.routers.mail_relay.tls=true
         - traefik.smtp.routers.mail_relay.tls.certresolver=le
         - traefik.smtp.routers.mail_relay.rule=HostSNI(`mail.${DOMAIN?Variable not set}`)
