--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,6 +133,9 @@ services:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
         - traefik.constraint-label=traefik-public
+        - traefik.tcp.routers.mail_relay.tls=true
+        - traefik.tcp.routers.mail_relay.tls.certresolver=le
+        - traefik.tcp.routers.mail_relay.rule=HostSNI(`mail.${DOMAIN?Variable not set}`)
         - traefik.tcp.routers.mail_relay.entrypoints=smtp
         - traefik.tcp.routers.mail_relay.service=mail_relay
         - traefik.tcp.services.mail_relay.loadbalancer.server.port=25
